syntax = "proto3";


service Monitoring {
    rpc getServiceInfoByName(GetServiceInfoByNameRequest) returns (GetServiceInfoByNameResponse) {}
    rpc getServiceWithMinResponseTime(EmptyRequest) returns (serviceInfoResponse) {}
    rpc getServiceWithMaxResponseTime(EmptyRequest) returns (serviceInfoResponse) {}
    rpc getHistoryRequests(EmptyRequest) returns (getHistoryRequestsResponse) {}
}

message EmptyRequest {}

message GetServiceInfoByNameRequest {
    string name = 1;
}

message GetServiceInfoByNameResponse {
    bool is_available = 1;
    int64 last_response_time = 2; // milliseconds
}

message serviceInfoResponse {
    string name = 1;
}

message getHistoryRequestsResponse {
    repeated getHistoryRequest getHistoryRequests = 1;
}

message getHistoryRequest {
    string request = 1;
    string date = 2;
}